# Homework

./: main.py  pyproject.toml
Scr/: processing.py
