[tool.poetry]
name = "homework-10-1"
version = "0.1.0"
description = ""
authors = ["Ivan Lipin <robotlink@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.12.0"
black = "^24.10.0"
isort = "^5.13.2"

[tool.black]
# Максимальная длина строки
line-length = 119

[tool.isort]
# максимальная длина строки
line_length = 119
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = '.venv'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

